examples/test_package/steps/pl___aircr:rough.pl_run1/#test_analysis_2_result.txt
### Evaluation Report: Aircraft Flap Controller in ProbLog

---

#### **1. Document Title**
**Analysis of Aircraft Flap Controller ProbLog Code and Test Results**

---

#### **2. Background and Purpose**
The provided ProbLog code models an aircraft flap controller system, where the flap's position is adjusted based on actuator strength and wind effects. The goal is to move the flap from position 6 to 4 within 5 time steps. The code includes probabilistic rules for actuator selection and wind effects, as well as deterministic rules for flap movement and goal verification.

The purpose of this evaluation is to:
- Verify the correctness of the code's logic and probabilistic reasoning.
- Analyze test results to identify failures or errors.
- Ensure compliance with ProbLog's syntax and semantics.

---

#### **3. Test Results Summary**
The test results indicate an error during evaluation:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 40:21.
```

**Queries and Results:**
- The queries `goal_reached(T)` and `overrun_exception(T)` were not executed due to the error.
- No probability results or successful test outputs were generated.

---

#### **4. Failure Localization**
The error occurs at line 40, column 21, where the `->/2` operator is used in the `attempted_flap_position` predicate. The ProbLog engine reports that no clauses are found for this operator, indicating a syntax or semantic issue.

**Failed Predicate:**
```prolog
attempted_flap_position(Time,Pos) :-
    Time > 0,
    Prev is Time-1,
    flap_position(Prev, PrevPos),
    \+ goal_reached(Prev),
    use_actuator(Time, Actuator),
    actuator_strength(Actuator, Strength),
    wind_effect(Time, WindEffect),
    goal(G),
    (   G > PrevPos ->
        Pos is PrevPos + Strength + WindEffect
    ;   G < PrevPos ->
        Pos is PrevPos - Strength + WindEffect
    ;   Pos = PrevPos
    ).
```

**Issue:**
- The `->/2` operator is not correctly interpreted in the ProbLog context. ProbLog does not natively support Prolog's `->/2` (if-then-else) operator in this form.

---

#### **5. Root Cause Analysis**
**Classical Prolog Context:**
- The `->/2` operator is valid in standard Prolog but not directly supported in ProbLog for conditional branching in rules. ProbLog requires explicit handling of probabilistic conditions.

**Probabilistic Context:**
- The code attempts to use deterministic branching (`->/2`) within a probabilistic model, which violates ProbLog's semantics. ProbLog's probabilistic reasoning relies on weighted facts and rules, not imperative control flow.

**DeepProbLog:**
- The code does not use any DeepProbLog features (e.g., `nn/3`, `tensor/...`). Report: "DeepProbLog feature not used."

---

#### **6. Overall Analysis**
**Functional Requirements:**
- **Classical Reasoning**: Partially met, but the use of `->/2` is incorrect.
- **Probabilistic Reasoning**: Partially met, but the conditional logic disrupts the probabilistic model.
- **Neural Network Integration**: Not applicable.

**Edge Cases:**
- The code does not handle cases where `wind_effect` or `actuator_strength` might lead to invalid positions (e.g., negative values or values exceeding the legal range).
- Recursive termination is ensured by the `Time > 0` condition, but the error prevents further evaluation.

---

#### **7. Error Summary**

| No. | Problem                          | Impact                          | Suggestion                                  |
|-----|----------------------------------|---------------------------------|--------------------------------------------|
| 1   | `->/2` operator unsupported      | Prevents query execution        | Replace with ProbLog-compatible conditions |
| 2   | Probabilistic branching incorrect | Incorrect probabilistic results | Use probabilistic facts for conditions     |
| 3   | Edge cases unhandled             | Potential runtime errors        | Add validation for flap positions          |

---

**Word Count:** 450 words.  
**Tone:** Formal and analytical.  
**Conclusion:** The code fails due to the unsupported `->/2` operator in ProbLog. Rewriting the conditional logic using ProbLog's probabilistic constructs is necessary for correct execution.